<resources>
    <string name="app_name">OdinInstall</string>
    <string name="app_name_temp">Odin Install</string>
    <string name="app_explain">移动端渠道推广解决方案</string>

    <string name="str_one_key_wakeup">一键唤醒</string>
    <string name="str_scenario_reduction">场景还原</string>
    <string name="str_channel">渠道效果</string>
    <string name="str_user">用户溯源</string>
    <string name="str_user_relation">关系列表</string>
    <string name="str_restore_scene">新闻快讯</string>
    <string name="str_restore_scene_count">%d人浏览</string>
    <string name="str_one_key_wakeup_use">立即使用</string>

    <string name="str_channel_test">测试落地页</string>
    <string name="str_visit_count">访问量</string>
    <string name="str_click_count">点击量</string>
    <string name="str_install_count">安装量</string>
    <string name="str_wakeup_count">唤醒量</string>
    <string name="str_channel_qr_code">渠道二维码</string>
    <string name="str_channel_explain">扫码打开页面并下载应用\n即会统计相应的渠道效果</string>

    <string name="str_news_title1">尽己所能、团结合作 四个关键词读懂习近平最新讲话</string>
    <string name="str_news_title2">中共中央、国务院：探索农村宅基地“三权分置”！究竟怎么改革？快来看</string>

    <string name="str_news_content1">人类文明史也是一部同疾病和灾难的斗争史。病毒没有国界，疫病不分种族。当前，人类正在经历第二次世界大战结束以来最严重的全球公共卫生突发事件，中国尽己所能、毫无保留。习近平强调：

经过艰苦卓绝努力，付出巨大代价，中国有力扭转了疫情局势，维护了人民生命安全和身体健康；

中方始终本着公开、透明、负责任的态度，及时向世卫组织及相关国家通报疫情信息，第一时间发布病毒基因序列等信息，毫无保留同各方分享防控和救治经验，尽己所能为有需要的国家提供了大量支持和帮助。人类是命运共同体，团结合作是战胜疫情最有力的武器。习近平在致辞中提出全力搞好疫情防控、发挥世卫组织领导作用、加大对非洲国家支持、加强全球公共卫生治理、恢复经济社会发展、加强国际合作六点建议，并明确提出支持世界卫生组织，加强团结合作：

国际抗疫正处于关键阶段，支持世卫组织就是支持国际抗疫合作、支持挽救生命；

中国呼吁国际社会加大对世卫组织政治支持和资金投入，调动全球资源，打赢疫情阻击战；

发展中国家特别是非洲国家公共卫生体系薄弱，帮助他们筑牢防线是国际抗疫斗争重中之重；

有条件的国家要在做好常态化疫情防控的前提下，遵照世卫组织专业建议，有序开展复工复产复学；

共同佑护各国人民生命和健康，共同佑护人类共同的地球家园，共同构建人类卫生健康共同体。</string>

    <string name="str_news_content2">新华社5月18日授权发布《中共中央、国务院关于新时代加快完善社会主义市场经济体制的意见》提出，加快建设城乡统一的建设用地市场，建立同权同价、流转顺畅、收益共享的农村集体经营性建设用地入市制度。探索农村宅基地所有权、资格权、使用权“三权分置”，深化农村宅基地改革试点。而关于探索宅基地“三权分置”，在半年内已有多个全国层面的文件相继提到。

2月5日，21世纪以来第17个指导“三农”工作的中央一号发布。其中明确——严格农村宅基地管理，加强对乡镇审批宅基地监管，防止土地占用失控。扎实推进宅基地使用权确权登记颁证。以探索宅基地所有权、资格权、使用权“三权分置”为重点，进一步深化农村宅基地制度改革试点。</string>

    <string name="str_share_url_news_detail">http://www.odinanalysis.com/.well-known/demo/link/detail.html</string>
    <string name="str_share_url_news_detail2">http://www.odinanalysis.com/.well-known/demo/link/detail2.html</string>
</resources>
