<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include layout="@layout/layout_header" />

    <TextView
        android:id="@+id/img_one_key_wakeup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="34dp"
        android:layout_marginTop="17dp"
        android:background="@drawable/shape_header"
        android:paddingStart="14dp"
        android:paddingLeft="14dp"
        android:paddingBottom="7dp"
        android:text="@string/str_channel_test"
        android:textColor="@color/colorChannelText"
        android:textSize="13sp" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        app:cardCornerRadius="2dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_call_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="18dp"
                    android:text="10000"
                    android:textColor="@color/colorAppName"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="11dp"
                    android:layout_marginBottom="14dp"
                    android:text="@string/str_visit_count"
                    android:textColor="@color/colorChannelData"
                    android:textSize="10sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_onclick_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="18dp"
                    android:text="10000"
                    android:textColor="@color/colorAppName"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="11dp"
                    android:layout_marginBottom="14dp"
                    android:text="@string/str_click_count"
                    android:textColor="@color/colorChannelData"
                    android:textSize="10sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_install_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="18dp"
                    android:text="10000"
                    android:textColor="@color/colorAppName"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="11dp"
                    android:layout_marginBottom="14dp"
                    android:text="@string/str_install_count"
                    android:textColor="@color/colorChannelData"
                    android:textSize="10sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_visits_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="18dp"
                    android:text="10000"
                    android:textColor="@color/colorAppName"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="11dp"
                    android:layout_marginBottom="14dp"
                    android:text="@string/str_wakeup_count"
                    android:textColor="@color/colorChannelData"
                    android:textSize="10sp" />
            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/str_channel_qr_code"
                android:textColor="@color/colorChannelText"
                android:textSize="14sp" />

            <ImageView
                android:id="@+id/img_channel_qr_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="11dp"
                android:src="@mipmap/icon_qr_code"
                android:contentDescription="@string/app_name" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="29dp"
                android:text="@string/str_channel_explain"
                android:textColor="@color/colorChannelExplain"
                android:textSize="10sp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>