<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include layout="@layout/layout_header" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        app:cardCornerRadius="2dp"
        app:cardUseCompatPadding="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_user_trace_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@mipmap/icon_user_1"
                android:drawableLeft="@mipmap/icon_user_1"
                android:drawablePadding="14dp"
                android:gravity="center"
                android:padding="12dp"
                android:textColor="@color/colorAppName"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btn_user_relation"
                android:layout_width="72dp"
                android:layout_height="35dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="12dp"
                android:layout_marginRight="12dp"
                android:background="@drawable/shape_user"
                android:text="@string/str_user_relation" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/str_channel_qr_code"
                android:textColor="@color/colorChannelText"
                android:textSize="14sp" />

            <ImageView
                android:id="@+id/img_user_trace_qr_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="11dp"
                android:src="@mipmap/icon_qr_code" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="29dp"
                android:text="@string/str_channel_explain"
                android:textColor="@color/colorChannelExplain"
                android:textSize="10sp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>